many bugfixes and new unified Model module